--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
+/* header */
+
 .logo {
-  height: 6rem;
-  padding: 1rem;
+  height: 4rem;
+  padding: 0.5rem;
   border-radius: 50%;
   will-change: filter;
   transition: filter 300ms;
+  margin: 0;
 }
 
 .logo:hover {
@@ -13,7 +16,7 @@
 header {
   display: flex;
   flex-direction: row;
-  height: 8rem;
+  height: 5.5em;
   width: 100%;
   /* border: 1px solid red; */
   background-color: var(--bg-secondary);
@@ -24,6 +27,7 @@ header {
 }
 
 .company-info {
+  align-items: center;
   display: flex;
 }
 
@@ -31,6 +35,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
+  font-size: 0.8rem;
 }
 
 .company-name {
@@ -43,13 +48,116 @@ header {
 
 nav {
   margin: 10px;
-  width: 7rem;
+  width: 5rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  gap: 0.1rem;
+}
+/* header */
+
+.loggedin-main {
+  margin-top: 5.5rem;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  /* border: 1px solid red */
+}
+
+.loggedout-main {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  /* border: 1px solid red */
+}
+
+/* login */
+.login-wrapper {
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.login-logo {
+  border-radius: 50%;
+  width: 12rem;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
+.login-input {
+  padding: 1rem;
+  border-radius: 1.5rem;
+  width: 16rem;
+  border: none;
+}
+
+.login-button {
+  width: 18rem;
+  font-size: 1rem;
+  border: 1px solid transparent;
+  background-color: var(--fg-primary);
+  color: var(--fg-secondary);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+/* login */
+
+
+/* register */
+.register-wrapper {
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.register-logo {
+  border-radius: 50%;
+  width: 12rem;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.register-input {
+  padding: 1rem;
+  border-radius: 1.5rem;
+  width: 16rem;
+  border: none;
+}
+
+.register-button {
+  width: 18rem;
+  font-size: 1rem;
+  border: 1px solid transparent;
+  background-color: var(--fg-primary);
+  color: var(--fg-secondary);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+/* register */
 .chart-container {
   width: 40rem;
   /* height: 40rem; */
