--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ a:hover {
   color: var(--fg-primary);
 }
 main {
-  margin-top: 8rem;
+  height: calc(100% - 5.5rem);
 }
 body {
   margin: 0;
@@ -44,9 +44,10 @@ h1 {
 }
 
 button {
+  margin: 0;
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.4em .6em;
+  padding: .2em .4em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
