--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: var(--bg-primary);
@@ -18,6 +17,10 @@
   --bg-secondary: #2D4263;
   --fg-primary: #C84B31;
   --fg-secondary: #ECDBBA;
+}
+
+#root {
+  width: 100%;
 }
 
 a {
