--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ nav {
 
 .loggedin-main {
   margin-top: 5.5rem;
-  position: absolute;
+  /* position: absolute; */
   left: 0;
   width: 100%;
   display: flex;
@@ -70,7 +70,7 @@ nav {
 }
 
 .loggedout-main {
-  position: absolute;
+  /* position: absolute; */
   left: 0;
   width: 100%;
   height: 100%;
