--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ header {
 
 .company-slogan {
   margin-top: 0;
-} 
+}
 
 nav {
   margin: 10px;
@@ -54,6 +54,7 @@ nav {
   grid-template-rows: 1fr 1fr;
   gap: 0.1rem;
 }
+
 /* header */
 
 .loggedin-main {
@@ -118,6 +119,7 @@ nav {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 /* login */
 
 
@@ -157,8 +159,33 @@ nav {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 /* register */
 .chart-container {
   width: 40rem;
   /* height: 40rem; */
+}
+
+.listaVenta {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 100px;
+  justify-content: center;
+  gap: 20px;
+}
+
+.listaVenta--head {
+  display: flex;
+  flex-direction: column;
+}
+
+.plop {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  background-color: inherit;
+
 }
