--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,219 @@ nav {
   transition: border-color 0.25s;
 }
 /* register */
+
+/* dashboard */
+
+.dashboard {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 3rem;
+}
+
 .chart-container {
-  width: 40rem;
-  /* height: 40rem; */
+  width: 44rem;
+}
+
+.left-half {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin: 1rem;
+  /* background-color: blueviolet; */
+}
+
+.right-half {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  /* margin: 0; */
+  padding: 0 3rem;
+  /* background-color: blueviolet; */
+  width: 100%;
+
+}
+
+.monthly-data {
+  display: flex;
+  gap: 2rem;
+}
+
+.data-card {
+  display: flex;
+  padding: 1rem;
+  border-radius: 10px;
+  gap: .4rem;
+}
+
+.datacard-ventas {
+  background-color: rgb(56, 56, 255);
+}
+.datacard-productos {
+  background-color: rgb(161, 13, 161);
+}
+.datacard-ganancia {
+  background-color: rgb(21, 170, 21);
+}
+
+.todo-list {
+  background-color: var(--bg-secondary);
+  box-shadow: 10px 0 10px #050505;
+  border-radius: 8px;
+  margin: 1rem;
+  height: 15rem;
+  width: 100%;
+}
+
+.todo-list-header {
+  display: flex;
+  height: 2rem;
+  /* border: 1px solid red; */
+  justify-content: space-between;
+  border-radius: 8px 8px 0 0;
+  padding: .2rem;
+  margin: 0;
+  background-color: var(--fg-primary);
+  /* position: absolute; */
+
+}
+
+.todo-list-title {
+  /* border: 1px solid blue; */
+  margin: 3px;
+  padding: 0;
+  font-size: 1rem;
+}
+
+.todo-list-list {
+  /* margin-top: 1rem; */
+  margin: .4rem;
+  margin-left: 0;
+  text-align: start;
+  text-decoration: none;
+  list-style: none;
+  padding-left: 1rem;
+  /* border: 1px solid red; */
+}
+
+.todo-list-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.todo-list-additem {
+  background-color: var(--fg-secondary);
+  color: black;
+  /* padding: 5px; */
+  /* height: 1rem; */
+  /* width: 1rem; */
+}
+
+.online-employees {
+  background-color: var(--bg-secondary);
+  box-shadow: 10px 0 10px #050505;
+  border-radius: 8px;
+  /* margin: 1rem; */
+  height: 15rem;
+  width: 100%;
+}
+
+.online-employees-header {
+  display: flex;
+  height: 2rem;
+  /* border: 1px solid red; */
+  justify-content: space-between;
+  border-radius: 8px 8px 0 0;
+  padding: .2rem;
+  margin: 0;
+  background-color: var(--fg-primary);
+  /* position: absolute; */
+}
+
+.online-employees-title {
+  /* border: 1px solid blue; */
+  margin: 3px;
+  padding: 0;
+  font-size: 1rem;
+}
+.online-employees-list {
+  /* margin-top: 1rem; */
+  margin: .4rem;
+  margin-left: 0;
+  padding-left: 1rem;
+  text-align: start;
+  text-decoration: none;
+  list-style: none;
+  /* border: 1px solid red; */
+}
+/* dashboard */
+
+
+/* sales */
+
+.search-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: 6rem;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.search-input {
+  border-radius: 10px;
+  border: 1px solid var(--fg-primary);
+  font-size: 1.2rem;
+  padding: 0.4rem;
+}
+
+.search-submit {
+  margin: 0;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: .2em .4em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: var(--fg-primary);
+  color: var(--fg-secondary);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.separator {
+  width: 100%;
+  height: .5rem;
+  /* margin-bottom: 1rem; */
+  background-color: var(--bg-secondary)
+}
+
+.table {
+  margin: 1rem;
+  display: grid;
+}
+
+.table-head {
+  background-color: var(--fg-primary);
+  color: var(--fg-secondary);
+  padding: .4rem;
+  border-radius: 10px 10px 0 0;
+}
+
+.table-body {
+  background-color: var(--bg-secondary);
+  color: var(--fg-secondary);
+  border-radius: 0 0 10px 10px;
+}
+
+.table-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.table-data {
+  /* margin: 1rem; */
+  border: 1px solid var(--fg-primary);
+  padding: .5rem;
 }
