--- a/src/App.css
+++ b/src/App.css
@@ -390,25 +390,30 @@ nav {
 .listaVenta {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 650px;
   padding-left: 30px;
   padding-right: 30px;
   margin-top: 100px;
   align-items: center;
   gap: 20px;
+  background-color: cornflowerblue;
 }
 
 .listaVenta--titulos {
   display: flex;
   flex-direction: row;
   gap: 36px;
+  border: 50px;
+  border-color: white;
+  width: 109.5%;
+  background-color: darkred;
 }
 
 .listaVentas--productos {
   display: flex;
   flex-direction: row;
-  gap: 37px;
-  width: 644px;
+  gap: 49px;
+  width: 588px;
   align-items: center;
 }
 
