Pagina de config y logica de sales

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   --bg-primary: #191919;
   --bg-secondary: #2D4263;
   --fg-primary: #C84B31;
-  --fg-secondary: #ECDBBA;
+  --fg-secondary: #ffffff;
 }
 
 #root {
