--- a/src/App.css
+++ b/src/App.css
@@ -53,44 +53,33 @@ header {
 
 nav {
   margin: 10px;
-  width: 5rem;
+  width: 7.2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 0.1rem;
 }
 
 /* header */
 
-.loggedin-main {
-  margin-top: 5.5rem;
-  /* position: absolute; */
-  left: 0;
-  width: 100%;
+/* home */
+
+.home-wrapper {
   display: flex;
-  text-align: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
   justify-content: center;
-  /* border: 1px solid red */
+  height: 35rem;
+  gap: 1rem;
 }
 
-.loggedout-main {
-  /* position: absolute; */
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  /* border: 1px solid red */
-}
+/* home */
 
 /* login */
 .login-wrapper {
   /* border: 1px solid orange; */
+  margin: 4rem;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -135,6 +124,7 @@ nav {
   flex-direction: column;
   text-align: center;
   align-items: center;
+  margin: 4rem;
 }
 
 .register-logo {
@@ -145,7 +135,7 @@ nav {
 .register-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .6rem;
 }
 
 .register-input {
@@ -153,6 +143,12 @@ nav {
   border-radius: 1.5rem;
   width: 16rem;
   border: none;
+}
+
+.register-label {
+  display: flex;
+  margin-left: 10px;
+  justify-content: start;
 }
 
 .register-button {
@@ -354,6 +350,7 @@ nav {
   background-color: var(--bg-secondary)
 }
 
+/* table */
 .table {
   margin: 1rem;
   display: grid;
@@ -381,7 +378,58 @@ nav {
   /* margin: 1rem; */
   border: 1px solid var(--fg-primary);
   padding: .5rem;
+  display: flex;
+  justify-content: end;
+  gap: 0.4rem;
 }
+/* table */
+
+/* config */
+
+.config-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.config-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .6rem;
+  /* width: 10rem; */
+}
+
+
+.config-input {
+  border-radius: 10px;
+  border: 1px solid var(--fg-primary);
+  font-size: 1rem;
+  padding: 0.4rem;
+  width: 16rem;
+}
+
+.config-label {
+  /* padding: 1rem; */
+  border-radius: 1.5rem;
+  width: 16rem;
+  border: none;
+  font-size: 1.2rem;;
+}
+
+.config-submit {
+  width: 17rem;
+  font-size: 1rem;
+  border: 1px solid transparent;
+  background-color: var(--fg-primary);
+  color: var(--fg-secondary);
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+
+
+/* config */
+
 .listaVenta {
   display: flex;
   flex-direction: row;
