--- a/src/App.css
+++ b/src/App.css
@@ -94,16 +94,29 @@ nav {
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
 }
 
 .login-input {
   padding: 1rem;
+  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   border-radius: 1.5rem;
   width: 16rem;
   border: none;
 }
 
+.login-error-message {
+  color: red;
+  font-size: 0.7rem;
+  padding: 0;
+  margin: 0;
+  margin-left: 10px;
+  justify-content: start;
+  align-items: start;
+  text-align: start;  
+}
 .login-button {
   width: 18rem;
   font-size: 1rem;
