--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,7 @@ nav {
 
 .chart-container {
   width: 44rem;
+  height: 26rem;
 }
 
 .left-half {
@@ -291,7 +292,7 @@ nav {
   box-shadow: 10px 0 10px #050505;
   border-radius: 8px;
   /* margin: 1rem; */
-  height: 15rem;
+  height: 14rem;
   width: 100%;
 }
 
@@ -388,16 +389,23 @@ nav {
 
 .table-row {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .table-data {
   /* margin: 1rem; */
-  border: 1px solid var(--fg-primary);
+  border: 1px solid #1e2f49;
   padding: .5rem;
   display: flex;
-  justify-content: end;
+  justify-content: start;
   gap: 0.4rem;
+}
+
+.input-sell {
+  border-radius: 10px;
+  border: 0;
+  font-size: 1rem;
+  padding: 0.4rem;
+  width: 6.8rem;
 }
 /* table */
 
@@ -521,21 +529,90 @@ textarea {
 
 .sell-wrapper {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   flex-direction: column;
+}
+
+.sell-wrapper-2 {
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-around;
+}
+
+.sell-left {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--bg-secondary);
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 10px;
+  margin: 1rem;
+}
+
+.sell-left-title {
+  margin: 0;
+}
+
+.sell-left-info {
+  padding: 1rem;
+  border-radius: .5rem;
+  width: 16rem;
+  border: none;
+}
+
+.sell-right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
 }
 
 .sell-search-wrapper {
   display: flex;
   gap: 1rem;
-  margin-bottom: 1rem;
+  margin: 1rem;
 }
 
-.sell-search-input {
-  border-radius: 10px;
-  border: 1px solid var(--fg-primary);
+.sell-search-id-form {
+  display: flex;
+  gap: 0.4rem;
+}
+
+.sell-search-id-input {
+  border-radius: 20px;
+  display: flex;
   font-size: 1rem;
   padding: 0.4rem;
-  width: 16rem;
+  width: 7rem;
+  border: none;
+}
+
+.sell-search-desc-form {
+  display: flex;
+  gap: 0.4rem;
+  width: 100%;
+}
+
+.sell-search-desc-input {
+  border-radius: 20px;
+  display: flex;
+  font-size: 1rem;
+  padding: 0.4rem;
+  width: 100%;
+  border: none;
+}
+
+.sell-search-submit {
+  background-color: var(--fg-primary);
+  color: var(--fg-secondary);
+  border: 1px solid transparent;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  border-radius: 20px;
+  padding: 1rem;
+}
+
+.autocomplete-search {
+  width: 100%;
 }
